tests/spec/build/snapshots/struct_satisfies_inherited_methods_via_lowering.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "io"

type Dev struct{}

func (d Dev) Read(_ []uint8) (int, error) {
	return 0, nil
}

func (d Dev) Write(_ []uint8) (int, error) {
	return 0, nil
}

func useRw(_ io.ReadWriter) int {
	return 0
}

func main() {
	d := Dev{}
	useRw(d)
}
