tests/spec/build/snapshots/tuple_with_nilable_option_slot_lowers_recursively.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Cmd func() int

func produce() (int, Cmd) {
	return 42, func() int {
		return 7
	}
}

func consume() int {
	ret_1, ret_2 := produce()
	option_3 := lisette.OptionFromNilable[Cmd](ret_2, ret_2 == nil)
	tup_4 := lisette.MakeTuple2(ret_1, option_3)
	n := tup_4.First
	c := tup_4.Second
	if c.Tag == lisette.OptionSome {
		return n + c.SomeVal()
	}
	return n
}

func main() {
	consume()
}
