tests/spec/build/snapshots/unused_method_with_go_import_not_emitted.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Name struct {
	first string
	last  string
}

func main() {
	n := Name{
		first: "A",
		last:  "B",
	}
	fmt.Println(n.first)
}
