tests/spec/build/snapshots/unused_variables_prefixed_in_go_output.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func process(_, used_param int) int {
	used_var := used_param * 2
	return used_var
}

func main() {
	process(1, 2)
}
