tests/spec/build/snapshots/user_alias_to_function_is_nilable_in_option_return.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type Callback func() int

func maybeGet() Callback {
	return func() int {
		return 42
	}
}

func run(cb lisette.Option[Callback]) int {
	if cb.Tag == lisette.OptionSome {
		return cb.SomeVal()
	}
	return -1
}

func main() {
	raw := maybeGet()
	cb := lisette.OptionFromNilable[Callback](raw, raw == nil)
	fmt.Println(run(cb))
}
