tests/spec/build/snapshots/user_close_lowers_to_bare_error.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

type Resource struct{}

func (r Resource) Close() error {
	return nil
}

func main() {
	r := Resource{}
	r.Close()
}
