tests/spec/build/snapshots/user_file_named_bootstrap_does_not_collide.snap
---
source: tests/spec/build/mod.rs
---
// === bootstrap.go ===
package main


// === main.go ===
package main

func MakeAA() A {
	return A{Tag: AA}
}

func main() {
	_ = MakeAA()
}

type ATag uint8

const (
	AA ATag = iota
)

type A struct {
	Tag ATag
}
