tests/spec/build/snapshots/user_function_returning_result_no_type_args.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"strconv"
)

func parseInt(s string) (int, error) {
	return strconv.Atoi(s)
}

func main() {
	ret_1, e := parseInt("42")
	if e == nil {
		n := ret_1
		fmt.Println(n)
	} else {
		fmt.Println(e)
	}
}
